@@ -345,7 +345,7 @@
       <_description>GNOME desktop.</_description>
       <module id="alacarte"/>
       <module id="bug-buddy"/>
-      <module id="dasher"/>
+      <module id="dasher" branch="gnome-2-18"/>
       <module id="deskbar-applet"/>
       <module id="eel"/>
       <module id="ekiga" branch="gnome-2-14"/>
@@ -418,7 +418,7 @@
     <category id="devtools">
       <_description>Development Tools.</_description>
       <module id="devhelp"/>
-      <module id="glade3"/>
+      <module id="glade3" branch="gnome-2-18"/>
     </category>
   </release>
   <release id="fifth-toe">
