@@ -1,3 +1,8 @@
+2007-03-07  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: glade3 and dasher branched for 2.18.
+
 2007-03-06  Daniel Nylander <po@danielnylander.se>
 
 	* translation-teams.xml.in: Updated Swedish information.
